fix: overflow-x hidden

--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -9,6 +9,7 @@
   z-index: 1;
   max-width: 100vw;
   margin: 0px auto;
+  overflow-x: hidden;
 }
 
 .app {
